# rust-chat

./: .gitignore  Cargo.toml  README.md  chat.db
migrations/2024-10-29-161809_create_conversations/: down.sql  up.sql
migrations/2024-10-29-161809_create_users/: up.sql
migrations/2024-10-29-161851_dummy_data/: up.sql
src/: db.rs  main.rs  models.rs  rooms.rs  routes.rs  schema.rs  server.rs  session.rs  users.rs
ui/: package-lock.json  package.json  tailwind.config.js
ui/components/: login.js
ui/pages/: index.js
