[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-actors = "4.3.1"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
rand = "0.8.5"
serde = "1.0.214"
serde_json = "1.0.132"